<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="block_management">屏蔽管理</string>
    <string name="restore">恢复</string>
    <string name="app_name">福务网</string>
    <string name="name">福务网</string>
    <string name="action_settings">Settings</string>
    <string name="talk">对话</string>
    <string name="address_book">通讯录</string>
    <string name="settings">设置</string>
    <string name="send">发送</string>
    <string name="please_user">输入帐号</string>
    <string name="please_pwd">输入密码</string>
    <string name="fuhao">></string>
    <string name="delate">删除对话</string>
    <string name="button_all">全部</string>
    <string name="button_recently">最近</string>
    <string name="button_trading">交易</string>
    <string name="button_subscription">订阅</string>
    <string name="login">登录</string>
    <string name="regist">立即注册</string>
    <string name="regist_title">注册</string>
    <string name="forgot_pwd">忘记密码?</string>
    <string name="next">下一步</string>
    <string name="agreement">我已经阅读并同意</string>
    <string name="agreement2">福务网用户注册协议</string>
    <string name="regist_error">格式错误！</string>
    <string name="phone_ok">确认</string>
    <string name="yz_error">验证码错误！</string>
    <string name="yz_send">发送</string>
    <string name="yz_sends">重新发送</string>
    <string name="regist_over">完成</string>
    <string name="back_title">找回密码</string>
    <string name="system_title">系统公告</string>
    <string name="cancel">取消</string>
    <string name="validate">已向手机发送验证码</string>
    <string name="validate2">180秒内有效</string>
    <string name="update_title">修改密码</string>
    <string name="yzm_error">验证码错误！</string>
    <string name="receive_mess">恢复收听此人</string>
    <string name="my_info">我的信息</string>
    <string name="my_info_userface">头像：</string>
    <string name="my_info_nickname">昵称：</string>
    <string name="my_info_fuzhi">福指：</string>
    <string name="my_info_certification">行业认证：</string>
    <string name="my_info_classtype">课程类别：</string>
    <string name="my_info_mobile">手机号码：</string>
    <string name="my_info_email">邮箱：</string>
    <string name="my_info_birthday">生日：</string>
    <string name="my_info_location">所在地：</string>
    <string name="my_info_sex">性别：</string>
    <string name="pushsetting">消息推送</string>
    <string name="pushsetting_ing">消息主动推送</string>
    <string name="pushsetting_sound">消息提示音</string>
    <string name="pushsetting_shake">消息震动</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="edit_null">昵称不能为空！</string>
    <string name="takephoto">拍照上传</string>
    <string name="lookphoto">查看头像</string>
    <string name="fromphotostore">相册上传</string>
    <string name="agreement_title">福务网用户注册协议</string>
    <string name="no_change">个人信息没有任何变化！</string>
    <string name="no_internet">网络异常</string>
    <string name="talk_nickname">设置备注</string>
    <string name="personal_info">个人信息</string>
    <string name="set_customname">设置备注</string>
    <string name="modify_nickname">修改昵称</string>
    <string name="quit_message">您确认要退出应用吗?</string>
    <string name="about_us">关于我们</string>
    <string name="about_us_text">\u3000\u3000福务网（fuwu.com）致力于打造全球最大的知识、信息、资讯等无形服务的传递、传授平台，使无形/软性服务的传递、传授突破空间的限制，让所有的无 形服务触手可及，降低无形的服务传递、传授的时间成本和空间成本，进而降低资源浪费；方便人们对各类知识、信息、资讯的获取，提高人们对知识的尊重和价值 认可，提高人们学习进取的积极性，进而改善人们的生活习惯，提升全民族的精神素养，为创建和谐社会提供重要的物质基础。\n\u3000\u3000手机端《福务网》是上海知是网络为用户提供的以通讯功能为主的APP。帮助福师在手机上与福客进行沟通，并辅助其推广福务。\n\u3000\u3000福务网福务电话：400-000-5555 工作时间：24小时（法定节假日除外） 邮箱：service@fuwu.com </string>
    <string name="look_message">发送消息</string>
    <string name="lookall_mes">查看所有消息</string>
    <string name="clearall_mes">清除聊天记录</string>

</resources>