<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@color/red" >

        <ImageView
            android:id="@+id/exit"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/back_title"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="30dp" >

            <EditText
                android:id="@+id/pwd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:hint="输入新密码"
                android:inputType="text"
                android:textColor="#333333"
                android:textColorHint="@color/qianhui"
                android:textSize="20sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#DBDBDB" />

            <EditText
                android:id="@+id/pwds"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:hint="确认密码"
                android:inputType="text"
                android:textColor="#333333"
                android:textColorHint="@color/qianhui"
                android:textSize="20sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#DBDBDB" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="60dp"
                android:background="#DBDBDB" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:inputType="phone"
                    android:text="15862373890"
                    android:textColor="#333333"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/phone_ok"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/login_btn"
                    android:text="@string/phone_ok"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/phone_error"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_toLeftOf="@id/phone_ok"
                    android:gravity="center"
                    android:text="@string/regist_error"
                    android:textColor="@color/red"
                    android:textSize="16sp" />

                <View
                    android:id="@+id/view"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/phone_ok"
                    android:layout_marginTop="20dp"
                    android:background="#DBDBDB" />

                <EditText
                    android:id="@+id/yz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/view"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@null"
                    android:gravity="center"
                    android:hint="输入验证码"
                    android:inputType="text"
                    android:textColor="#333333"
                    android:textColorHint="@color/qianhui"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/yz_send"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignTop="@id/yz"
                    android:background="@drawable/login_btn"
                    android:text="@string/yz_send"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/yz_error"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignTop="@id/yz"
                    android:layout_toLeftOf="@id/yz_send"
                    android:gravity="center"
                    android:text="@string/yz_error"
                    android:textColor="@color/red"
                    android:textSize="16sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/yz_send"
                    android:layout_marginTop="10dp"
                    android:background="#DBDBDB" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/agreement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agreement"
                    android:textColor="#333333"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/xy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agreement2"
                    android:textColor="@color/red"
                    android:textSize="16sp" />
            </LinearLayout>

            <Button
                android:id="@+id/next"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_btn"
                android:text="@string/regist_over"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>