<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@color/red" >

        <ImageView
            android:id="@+id/exit"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/pushsetting"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="20dp" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/pushsetting_ing"
                android:textColor="#666666"
                android:textSize="18sp" />

            <com.fuwu.mobileim.view.SlipButton
                android:id="@+id/pushsetting_sound"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#DBDBDB" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/pushsetting_sound"
                android:textColor="#666666"
                android:textSize="18sp" />

            <com.fuwu.mobileim.view.SlipButton
                android:id="@+id/pushsetting_music"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#DBDBDB" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/pushsetting_shake"
                android:textColor="#666666"
                android:textSize="18sp" />

            <com.fuwu.mobileim.view.SlipButton
                android:id="@+id/pushsetting_shake"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#DBDBDB" />
    </LinearLayout>

</LinearLayout>