<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/a_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/out_button_shape"
        android:paddingLeft="2dp" >

        <Button
            android:id="@+id/button_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/left_shape_red"
            android:text="@string/button_all" />

        <Button
            android:id="@+id/view_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/address_book_buttoncolor_red" />

        <Button
            android:id="@+id/button_recently"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/middle_shape_white"
            android:text="@string/button_recently" />

        <Button
            android:id="@+id/view_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/address_book_buttoncolor_red" />

        <Button
            android:id="@+id/button_trading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/middle_shape_white"
            android:text="@string/button_trading" />

        <Button
            android:id="@+id/view_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/address_book_buttoncolor_red" />

        <Button
            android:id="@+id/button_subscription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/right_shape_white"
            android:text="@string/button_subscription" />
    </LinearLayout>

    <ListView
        android:id="@+id/contacts_list_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/a_layout"
        android:fadingEdge="none"
        android:scrollbars="none" >
    </ListView>

    <LinearLayout
        android:layout_width="50dip"
        android:layout_height="550dip"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/a_layout"
        android:layout_marginRight="20px" >

        <Button
            android:id="@+id/alphabetButton"
            android:layout_width="wrap_content"
            android:layout_height="550dip"
            android:background="@drawable/a_z" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/section_toast_layout"
        android:layout_width="70dip"
        android:layout_height="70dip"
        android:layout_alignParentRight="true"
        android:background="@drawable/section_toast"
        android:visibility="gone" >

        <TextView
            android:id="@+id/section_toast_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#fff"
            android:textSize="30sp" />
    </RelativeLayout>

</RelativeLayout>